Testing SquarePolicy